# life-analytics-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: add-feature.md  checkpoint.md  setup-project.md  update-docs.md
.claude/hooks/: lint.sh  safety-check.sh
.claude/skills/steering/: SKILL.md
.claude/skills/steering/templates/: design.md  requirements.md  tasklist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-mac-mini.yml
.steering/20260614-plaud-importer/: design.md  requirements.md  tasklist.md
.steering/20260620-plaud-auth-timeout/: design.md  requirements.md  tasklist.md
.steering/20260622-daily-note-template/: design.md  requirements.md  tasklist.md
.steering/20260623-obsidian-daily-note-commands/: design.md  requirements.md  tasklist.md
docs/: api-spec.md  architecture.md  data-spec.md  development-guidelines.md  product-requirements.md
docs/requirements/: plaud-importer.md
docs/specs/: plaud-importer.md
docs/tasks/: plaud-importer.md
life_analytics/: config.py  obsidian_writer.py  plaud_client.py  plaud_importer.py
life_analytics/obsidian/: append_plaud_link.py  create_daily_note.py
tests/: test_append_plaud_link.py  test_create_daily_note.py  test_obsidian_writer.py  test_plaud_client.py  test_plaud_importer.py
